<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rickjo.trivia2.start"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="1"
    android:background="@drawable/startbackground3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text=""
        android:textSize="32sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/mulai"
        android:layout_marginTop="200dp"
        android:onClick="startGame"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/skor_tertinggi"
        android:layout_marginTop="10dp"
        android:onClick="hiScore"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/creditButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="creatorCredits"
        android:text="@string/info"
        tools:textAllCaps="false" />

</LinearLayout>
