<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hiscore"
    android:orientation="vertical"
    android:background="@color/colorBlue">

    <TextView
        android:id="@+id/hiscore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/skor_tertinggi"
        android:textSize="40sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:text="Algoritma Dasar"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="40dp"
        android:gravity="left"
        android:text="@string/beginner"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/algoez"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="70dp"
        android:gravity="left"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:text="@string/intermediate"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/algoin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layout_marginRight="50dp"
        android:gravity="right"
        android:text="@string/expert"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/algoex"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:layout_marginRight="70dp"
        android:gravity="right"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:gravity="center_horizontal"
        android:text="Pemrograman C++"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="40dp"
        android:gravity="left"
        android:text="@string/beginner"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cppez"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="70dp"
        android:gravity="left"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="330dp"
        android:gravity="center_horizontal"
        android:text="@string/intermediate"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cppin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="330dp"
        android:layout_marginRight="50dp"
        android:gravity="right"
        android:text="@string/expert"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cppex"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        android:layout_marginRight="70dp"
        android:gravity="right"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="450dp"
        android:gravity="center_horizontal"
        android:text="Pemrograman Web"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="40dp"
        android:gravity="left"
        android:text="@string/beginner"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phpez"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="510dp"
        android:layout_marginLeft="70dp"
        android:gravity="left"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="480dp"
        android:gravity="center_horizontal"
        android:text="@string/intermediate"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phpin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="510dp"
        android:gravity="center_horizontal"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="480dp"
        android:layout_marginRight="50dp"
        android:gravity="right"
        android:text="@string/expert"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/phpex"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="510dp"
        android:layout_marginRight="70dp"
        android:gravity="right"
        android:text="@string/_0"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        android:layout_centerHorizontal="true"
        android:text="Hapus"
        android:onClick="deleteScore"
        />

</RelativeLayout>